# AI-Music-Generation-app

./: .gitignore  CLAUDE.md  README.md  audio_edit_test.html  celery_app.py  editing.md  explain.md  main.py  plan.md  pyproject.toml  requirements.txt  sample_requests.md  thirdpartyapi.md  userflow.md
agents/: album_agent.py
migrations/: 001_create_albums.sql  002_add_script_excerpt.sql  003_add_music_metadata_id_2.sql  004_add_musicgpt_task_id.sql  005_create_editing_table.sql
models/: album_model.py  download_model.py  extend_model.py  lyrics_model.py  music_model.py  project_model.py  prompt_model.py  remix_model.py  separation_model.py  sound_model.py
prompts/: album_lyrics_generation.md  album_prompt_generation.md  album_script_analysis.md  musicenhancerprompt.md
routers/: album_router.py  audio_edit_test_router.py  download_router.py  extend_router.py  inpaint_router.py  lyrics_router.py  music_router.py  project_router.py  prompt_router.py  separation_router.py  sound_router.py
services/: album_service.py  download_service.py  enhancer_service.py  lyrics_service.py  music_service.py  project_service.py  prompt_service.py  separation_service.py  sound_service.py  warmth_service.py
tasks/: music_tasks.py
