[project]
name = "ai-music-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "demucs>=4.0.1",
    "fastapi>=0.135.2",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "supabase>=2.28.3",
    "torchcodec>=0.11.0",
    "uvicorn[standard]>=0.42.0",
]
